--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -18,3 +18,39 @@ textarea.child {
   
 div.parent {height:60px;}
 textarea.child {height:100%;}
+
+#preloader_img{
+	margin-right: 16px;
+	width: 24px;
+	height: 24px;
+}
+
+#comparison table td, #comparison table th{
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	padding:0px 0px 0px 0px;
+}
+
+#comparison table #r0{
+	background: #eee;
+	padding:2px;
+}
+
+#comparison table td{
+	border-bottom: 1px solid #ccc;
+}
+
+img.tick{
+	width:18px;
+	height:18px;
+}
+
+td.numeric
+{
+/*	color: #222;*/
+}
+
+td.tick, td.no
+{
+	text-align:center;
+}
