Added DataTable class and multiple selection

--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -15,6 +15,10 @@ textarea.child {
       height:100%;
 }
   
+text{
+    cursor:pointer;
+}
+  
 div.parent {height:60px;}
 textarea.child {height:100%;}
 
