--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -28,18 +28,18 @@ textarea.child {height:100%;}
 	height: 24px;
 }
 
-#comparison table td, #comparison table th{
+.comparison table td, .comparison table th{
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	padding:0px 0px 0px 0px;
 }
 
-#comparison table #r0{
+.comparison table #r0{
 	background: #eee;
 	padding:2px;
 }
 
-#comparison table td{
+.comparison table td{
 	border-bottom: 1px solid #ccc;
 }
 
