Fixed table layout and resize
Still problems with layout in IE

--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -48,6 +48,16 @@ img.tick{
 	height:18px;
 }
 
+table{
+  table-layout:fixed;
+  border-spacing:0px;
+}
+
+table td, table tr{
+  table-layout:fixed;
+  border-spacing:0px;
+}
+
 img.no{
 	width:18px;
 	height:18px;
