--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -88,3 +88,25 @@ td.tick, td.no
 {
 	text-align:center;
 }
+
+#error_overlay {
+     visibility: hidden;
+     position: absolute;
+     left: 0px;
+     top: 0px;
+     width:100%;
+     height:100%;
+     text-align:center;
+     z-index: 1000;
+     background-color: rgba(0,0,0,0.3);
+}
+
+#error_report {
+     width:700px;
+     height: 500px;
+     margin: 100px auto;
+     background-color: #fff;
+     border:1px solid #000;
+     padding:15px;
+     text-align:center;
+}
