--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -102,11 +102,13 @@ td.tick, td.no
 }
 
 #error_report {
-     width:700px;
+     width:800px;
      height: 500px;
      margin: 100px auto;
      background-color: #fff;
      border:1px solid #000;
      padding:15px;
      text-align:center;
+     overflow-x:scroll;
+     overflow-y:scroll;
 }
