Changed formatting of Effectively Mandatory Features in Table

--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -116,3 +116,8 @@ td.tick, td.no
 .text_input {
      height: 12px;
 }
+
+#comparison .EffectMan {
+    border-left: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
+}
