--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -103,14 +103,19 @@ td.tick, td.no
 
 #error_report {
      width:800px;
-     height: 500px;
+     height: 450px;
      margin: 100px auto;
      background-color: #fff;
      border:1px solid #000;
      padding:15px;
-     text-align:center;
+     text-align:left;
      overflow-x:scroll;
      overflow-y:scroll;
+}
+
+#close_error{
+    cursor: pointer; 
+    border: 1px solid #ccc; 
 }
 
 .searchOmitted {
@@ -128,11 +133,12 @@ td.tick, td.no
 
 .help{
     z-index: 10000;
-    background: #000000;
     position: absolute;
-    width: 800px;
-    height: 550px;
-    color: #FFFFFF;
+    background: white;
+    width: 700px;
+    height: 450px;
+    color: #000000;
+    border: 1px solid #777;
 }
 
 .fadeOverlay{
