Bigger size of Matrix and other components

--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -90,7 +90,7 @@ td.tick, td.no
 }
 
 #error_overlay {
-     visibility: hidden;
+     display: none;
      position: absolute;
      left: 0px;
      top: 0px;
