--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -10,7 +10,7 @@ textarea.child {
       height:100%;
 }
   
-circle, text{
+circle, text, rect.square, polygon.octagon{
     cursor:pointer;
 }
   
