--- a/Server/Client/styles.css
+++ b/Server/Client/styles.css
@@ -63,11 +63,11 @@ th{
 .searchOmitted {
     display: none;
 }
-
+/*
 .text_input {
      height: 12px;
 }
-
+*/
 pre {
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
